# solvela-python

./: .gitignore  CLAUDE.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release-pypi.yml
docs/: RELEASE_CHECKLIST.md
scripts/: smoke.py
src/rustyclaw/: __init__.py  balance.py  cache.py  client.py  config.py  constants.py  errors.py  openai_compat.py  quality.py  session.py  signer.py  transport.py  types.py  wallet.py
src/solvela/: __init__.py  balance.py  cache.py  client.py  config.py  constants.py  errors.py  openai_compat.py  quality.py  session.py  signer.py  transport.py  types.py  wallet.py
tests/integration/: test_client.py  test_transport.py
tests/live/: conftest.py  test_live_chat.py
tests/unit/: test_balance.py  test_cache.py  test_client.py  test_config.py  test_errors.py  test_openai_compat.py  test_quality.py  test_session.py  test_signer.py  test_transport.py  test_types.py  test_wallet.py
