[project]
name = "solvela"
version = "0.1.0"
description = "Python SDK for Solvela — Solana-native AI agent payment gateway"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.27,<1.0",
    "mnemonic>=0.20,<1.0",
    # Tight upper bound — solders is the cryptographic signing library; we
    # want to opt-in to ABI/serialization changes rather than absorb them
    # via transitive resolution.
    "solders>=0.21,<0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.10"
strict = true
