[project]
name = "solvela-sdk"
version = "0.2.0"
description = "Solana-native payment gateway for AI agents — pay for LLM calls with USDC, no API keys"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Solvela", email = "dev@solvela.ai" },
]
keywords = ["solana", "x402", "ai", "payment-gateway", "usdc", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27,<1.0",
    "mnemonic>=0.20,<1.0",
    # Tight upper bound — solders is the cryptographic signing library; we
    # want to opt-in to ABI/serialization changes rather than absorb them
    # via transitive resolution.
    "solders>=0.21,<0.30",
]

[project.urls]
Homepage = "https://solvela.ai"
Repository = "https://github.com/solvela-ai/solvela-python"
Issues = "https://github.com/solvela-ai/solvela-python/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/solvela"]

[tool.hatch.build.targets.sdist]
include = [
  "src/solvela",
  "README.md",
  "LICENSE",
  "SECURITY.md",
  "pyproject.toml",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.10"
strict = true
